--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="boton">
           <button id="perro">Perro</button>
         </div>
+        <div><span id="lista"></span></div>
       </div>
       <div class="padre">
         <div id="box1" class="caja">
